--- a/SeleniumFramework/pom.xml
+++ b/SeleniumFramework/pom.xml
@@ -14,6 +14,10 @@
 			  <artifactId>testng</artifactId> 
 			  <version>7.7.0</version>
 			   </dependency>
+			   <dependency> 
+				   <groupId>io.github.bonigarcia</groupId> 
+				   <artifactId>webdrivermanager</artifactId>
+				    <version>5.7.0</version> </dependency>
         <dependency> 
 <groupId>commons-io</groupId> 
 <artifactId>commons-io</artifactId>
